# ips_c_sample

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  param.h
filter/: filter.cpp  filter.h
pixelwise/: pixelwise.cpp  pixelwise.h
